# archi3D

./: .env.example  .env.template  .gitignore  CLAUDE.md  CONFIG_ARCHITECTURE_REDESIGN.md  CONFIG_INTEGRATION_COMPLETE.md  FILE_NAMING_REDESIGN.md  GEMINI.md  NAMING_UPDATE_STATUS.md  VFSCORE_CRASH_SOLVED.md  VFSCORE_DEBUG_STATUS.md  VFSCORE_FIX_SUMMARY.md  VFSCORE_INTEGRATION_COMPLETE.md  VFSCORE_SCHEMA_REDESIGN.md  VFSCORE_WORKSPACE_FIX.md  add_copyright.py  archi3d_010_PRD.txt  changelog.md  cli.py  commands.txt  config.yaml  config.yaml.example  generate_report.py  global.yaml  migration_command.txt  prompt.txt  pyproject.toml  quickstart.md  readme.md  report.html  requirements.lock.txt  test_env_debug.py  test_preprocessing_direct.py  test_vfscore_eval.py  test_vfscore_preprocessing.py
.claude/: settings.local.json
.claude/agents/: feature-implementer.md
config/: loader.py  schema.py
docs/: INTEGRATION.md
io/: catalog.py
metrics/: compute.py  report.py
orchestrator/: batch.py
plans/: Phase_0.md  Phase_1.md  Phase_10.md  Phase_2.md  Phase_3.md  Phase_4.md  Phase_5.md  Phase_6.md  Phase_7.md  Phase_7b.md  Phase_7c.md  Phase_8.md  Phase_9.md
scripts/: README_MIGRATION.md  fix_nov22_timestamps.py  migrate_legacy_results.py
src/archi3d/: __init__.py  __main__.py  cli.py
src/archi3d/adapters/: base.py  hunyuan3d.py  hunyuan3d_v2_single.py  hunyuan3d_v2p1_single.py  registry.py  rodin.py  trellis.py  trellis_single.py  tripo3d.py  tripo3d_v2p5_single.py  tripoSR_single.py  triposr_single.py
src/archi3d/config/: adapters.yaml  adapters_cfg.py  loader.py  paths.py  schema.py
src/archi3d/db/: catalog.py  generations.py
src/archi3d/io/: catalog.py
src/archi3d/metrics/: compute.py  discovery.py  fscore.py  fscore_adapter.py  vfscore.py  vfscore_adapter.py
src/archi3d/orchestrator/: batch.py  consolidate.py  worker.py
src/archi3d/plugins/: __init__.py  metrics.py
src/archi3d/reporting/: report.py
src/archi3d/utils/: __init__.py  io.py  text.py  uploads.py
tests/: test_phase0_paths_and_io.py  test_phase1_catalog_build.py  test_phase2_batch_create.py  test_phase3_run_worker.py  test_phase4_consolidate.py  test_phase5_compute_fscore.py  test_phase6_compute_vfscore.py
wheels/: fscore-0.2.0-cp311-cp311-win_amd64.whl  vfscore_rt-0.2.0-cp311-cp311-win_amd64.whl
